# fun-htmx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  release.toml
.github/workflows/: check.yml  create-todo-issues.yml
src/: lib.rs
src/interop/: rocket_v05.rs
tests/: render_spec.rs  serde_json_spec.rs
