[package]
name = "fun-htmx"
version = "1.1.0"
license = "MIT"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/jcornaz/fun-htmx"
description = "HTMX attributes for `fun-html`"
categories = ["template-engine"]
keywords = ["html", "web", "functional", "htmx", "fun-html"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["fun-html/std"]
serde_json = ["dep:serde", "dep:serde_json"]

[dependencies]
# Public
fun-html = { version = "1.2", default-features = false }
serde = { version = "1.0.114", default-features = false, optional = true }
serde_json = { version = "1.0.45", default-features = false, optional = true, features = ["alloc"] }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
serde = { version = "1", features = ["derive"] }
